# uc-rebalancing

./: .gitignore  README.md  pyproject.toml
dashboard/: eslint.config.mjs  next.config.js  package-lock.json  package.json
dashboard/app/: globals.css  layout.jsx  page.jsx
dashboard/public/data/: uc_rebalancing_results.json  uc_uplift_results.json
dashboard/src/components/: MethodologyTab.jsx  PolicyEngineHeader.jsx  ReformTab.jsx  SectionHeading.jsx
dashboard/src/lib/: chartUtils.js  colors.js  dataHelpers.js  formatters.js
data/: uc_rebalancing_results.json  uc_uplift_results.json
src/uc_rebalancing/: analysis.py  cli.py  pipeline.py  scenarios.py
src/uc_uplift/: __init__.py  analysis.py  cli.py  pipeline.py  scenarios.py
tests/: test_analysis.py  test_scenarios.py
